--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: python
 install:
-  - pip install --upgrade pip
   - pip install -r requirements.txt
-script:
-  - pytest
+script: pytest
 jobs:
   include:
     - name: "Python 3.8 on Linux"
       python: 3.8           # this works for Linux but is ignored on macOS or Windows
+      before_install:
+        - pip install --upgrade pip
     - name: "Python 3.8 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
       before_install:
         - choco install python --version 3.8
+        - python -m pip install --upgrade pip
+        - python -m pip install pytest
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
