--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,24 @@ install:
 script: pytest
 jobs:
   include:
-    - name: "Python 3.8 on Linux"
-      python: 3.8           # this works for Linux but is ignored on macOS or Windows
+    - name: "Python 3.7 on Linux"
+      python: 3.7           # this works for Linux but is ignored on macOS or Windows
       before_install:
         - pip install --upgrade pip
-    - name: "Python 3.8 on Windows"
+    - name: "Python 3.8 on Linux"
+      python: 3.8
+      before_install:
+        - pip install --upgrade pip
+    - name: "Python 3.7 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
+      before_install:
+        - choco install python --version 3.7
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
+    - name: "Python 3.8 on Windows"
+      os: windows
+      language: shell
       before_install:
         - choco install python --version 3.8
         - python -m pip install --upgrade pip
